コメント数表示の右余白排除

--- a/webroot/css/blogs.css
+++ b/webroot/css/blogs.css
@@ -38,6 +38,6 @@
 .blogs_entry_reaction div.pull-left{
     margin-right: 10px;
 }
-.blogs__content-comment-count{
-    padding-right: 15px;
-}
+/*.blogs__content-comment-count{*/
+    /*padding-right: 15px;*/
+/*}*/
