--- a/webroot/css/blogs.css
+++ b/webroot/css/blogs.css
@@ -20,6 +20,7 @@
     margin-bottom: 20px;
 }
 
+/* 一覧 */
 .blogs_entry_status {
     text-align: right;
     float:right;
@@ -41,3 +42,12 @@
 /*.blogs__content-comment-count{*/
     /*padding-right: 15px;*/
 /*}*/
+
+.blogs_view_title{
+    /*position: relative;*/
+}
+.blogs_view_title h1 .label{
+    margin-left: 10px;
+}
+.blogs_view_status{
+}
