一覧の区切り線をNetCommonsプラグインのstyle.cssにまかせるように変更

--- a/webroot/css/blogs.css
+++ b/webroot/css/blogs.css
@@ -4,13 +4,13 @@
 }
 
 .blogs_entry {
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 40px;
+    /*border-bottom: 1px solid #ccc;*/
+    /*margin-bottom: 40px;*/
 }
 
 .blogs_entry_title {
-    margin-top: 0px;
-    margin-bottom: 20px;
+    /*margin-top: 0px;*/
+    /*margin-bottom: 20px;*/
 
 }
 
@@ -22,8 +22,8 @@
 
 /* 一覧 */
 .blogs_entry_status {
-    text-align: right;
-    float:right;
+    /*text-align: right;*/
+    /*float:right;*/
 }
 
 .blogs_entry_body1 {
