ステータスラベル位置変更

--- a/webroot/css/blogs.css
+++ b/webroot/css/blogs.css
@@ -4,8 +4,9 @@
 }
 
 .blogs_entry {
-    /*border-bottom: 1px solid #ccc;*/
-    /*margin-bottom: 40px;*/
+    /* @see NetCommons/webroot/css/style.css
+.frame.nc-content-list article h2のmargin-topとあわせた*/
+    padding-top: 16px;
 }
 
 .blogs_entry_title {
