--- a/webroot/css/blogs.css
+++ b/webroot/css/blogs.css
@@ -5,8 +5,11 @@
 
 .blogs_entry {
     /* @see NetCommons/webroot/css/style.css
-.frame.nc-content-list article h2のmargin-topとあわせた*/
+	.frame.nc-content-list article h2のmargin-topとあわせた*/
     padding-top: 16px;
+}
+.blogs_entry:first-child {
+    padding-top: 0px;
 }
 
 .blogs_entry_title {
