一覧へボタンの修正 https://github.com/NetCommons3/NetCommons3/issues/486

--- a/webroot/css/blogs.css
+++ b/webroot/css/blogs.css
@@ -51,7 +51,7 @@
     /*position: relative;*/
 }
 .blogs_view_title h1 .label{
-    margin-left: 10px;
+    /*margin-left: 10px;*/
 }
 .blogs_view_status{
 }
